--- a/index.html
+++ b/index.html
@@ -216,10 +216,17 @@
             <p><i class="fa-regular fa-envelope"></i> tumelobasi@gmail.com</p>
             <p><i class="fa-solid fa-phone"></i> 0788493610</p>
             <div class="social-icons">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://www.facebook.com/tumelo.basi.9/"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
               <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a
+                href="https://www.linkedin.com/in/tumelo-maphalla-b2b5a7264/"
+                ,
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
               <!--<a href="#"><i class="fa-brands fa-square-whatsapp"></i></a>
                         <a href="#"><i class="fa-solid fa-envelope"></i></a>-->
             </div>
