Added  facebook and linked in profiles and target blank attribute

--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
             <p><i class="fa-regular fa-envelope"></i> tumelobasi@gmail.com</p>
             <p><i class="fa-solid fa-phone"></i> 0788493610</p>
             <div class="social-icons">
-              <a href="https://www.facebook.com/tumelo.basi.9/"
+              <a
+                href="https://www.facebook.com/tumelo.basi.9/"
+                ,
+                target="_blank"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
               <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
